tests/rosetta/out/Swift/abc-problem.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:32Z
func fields(_ s: String) -> [String] {
    var res: [String] = []
    var cur = ""
    var i = 0
    while i < s.count {
        let c = Array(s[i..<i + 1])
        if c == " " {
            if cur.count > 0 {
                res = res + [cur]
                cur = ""
            }
        }
        else {
            cur = cur + c
        }
        i = i + 1
    }
    if cur.count > 0 {
        res = res + [cur]
    }
    return res
}
func canSpell(_ word: String, _ blks: [String]) -> Bool {
    if word.count == 0 {
        return true
    }
    let c = lower(Array(word[0..<1]))
    var i = 0
    while i < blks.count {
        let b = blks[i]
        if c == lower(Array(b[0..<1])) || c == lower(Array(b[1..<2])) {
            var rest: [String] = []
            var j = 0
            while j < blks.count {
                if j != i {
                    rest = rest + [blks[j]]
                }
                j = j + 1
            }
            if canSpell(Array(word[1..<word.count]), rest) {
                return true
            }
        }
        i = i + 1
    }
    return false
}
func newSpeller(_ blocks: String) -> (String) -> Bool {
    let bl = fields(blocks)
    return { (w: String) -> Bool in canSpell(w, bl) }
}
func main() {
    let sp = newSpeller("BO XK DQ CP NA GT RE TG QD FS JW HU VI AN OB ER FS LY PC ZM")
    for word in ["A", "BARK", "BOOK", "TREAT", "COMMON", "SQUAD", "CONFUSE"] {
        print(word + " " + String(sp(word)))
    }
}
main()
